# Medicine-System

./: LICENSE  README.md  pyproject.toml
medicine_system/: LICENSE  README.md  app.py  config.py  models.py  route.py
medicine_system/sql/: Trigger.sql  data.sql  test.sql
medicine_system/static/css/: login.css
medicine_system/static/js/: echarts.js
medicine_system/templates/: base.html  data.html  function.html  index.html  login.html
medicine_system/templates/common/: index.html  medicine.html  orderlist.html  orderlist_add.html
medicine_system/templates/customer/: customer.html  customer_add.html  customer_change.html
medicine_system/templates/medicine/: medicine.html  medicine_add.html  medicine_change.html
medicine_system/templates/orderlist/: orderlist.html
medicine_system/templates/price/: price.html
medicine_system/templates/purchase/: purchase.html  purchase_add.html
medicine_system/templates/supplier/: supplier.html  supplier_add.html  supplier_change.html
medicine_system/templates/warning/: warning.html
